# arca

./: LICENSE  meson.build
include/: arca.h  arca_alloc.h  arca_array.h  arca_array_map.h  arca_array_misc.h  arca_array_static.h  arca_asm.h  arca_base.h  arca_bitmap.h  arca_btree.h  arca_chain.h  arca_page.h  arca_sideboard.h  arca_space.h  arca_string.h  arca_sys.h  arca_tree.h  arca_tree2.h  arca_tree3.h  arca_tree_interior.h  arca_tree_old.h  arca_tuple.h  arcex-array.hpp  arcex-base.hpp  arcex-erts.hpp  arcex-no-erts.hpp  array.h  array_fn.h  notes.txt  slip-alloc.hpp  slip-forms-bak.hpp  slip-forms-bak2.hpp  slip-forms.hpp  slip-stats.hpp  tester.h
src/: test-arca.cpp  test-slip-cache-stats-bak.cpp  test-slip-cache-stats.cpp  test-slip-cache.cpp  test-tester.cpp
